# Slowotok_Cheat_Cpp

./: App.cpp  App.h  CMakeLists.txt  File.cpp  File.h  Finder.cpp  Finder.h  README.md
UI/: About.cpp  About.h  MainWindow.cpp  MainWindow.h  about.ui  mainwindow.ui
